# ferropython

./: .env  Dockerfile  Makefile  README.md  README_MIGRATION.md  add_missing_columns.sql  alembic.ini  apply_category_fix.py  auth.py  blog.db  cookies.txt  create_sample_data.py  database.py  docker-compose.yml  features-to-implement.md  fix_posts_category.sql  fix_posts_category_manual.sql  implementation-tasks.md  init_categories.py  main.py  models.py  populate_cities.py  pyproject.toml  requirements.txt  run_migration.sh
alembic/: env.py
alembic/versions/: 001_create_posts_table.py  0ba698cbecdb_change_posts_category_id_to_category_.py  add_gauge_type_and_station_fields.py  b43b6d995c9e_add_railway_models_lines_stations_.py  da6d5fb2d56e_add_category_id_to_posts.py  f56450e09b98_add_is_published_field_to_posts_table.py
doc/: analysis.md
static/: ferrocarril-theme.css  ferrocarril-theme.js  style.css
templates/: admin.html  admin_categories.html  admin_cities.html  admin_dashboard.html  admin_events.html  admin_layout.html  admin_lines.html  admin_pages.html  admin_posts.html  admin_projects.html  admin_stations.html  base.html  categories.html  category_form.html  cities.html  city.html  city_form.html  edit_page.html  edit_post.html  event.html  event_form.html  events.html  index.html  index_backup.html  line.html  line_form.html  lines.html  login.html  new_page.html  new_post.html  page.html  post.html  project.html  project_form.html  projects.html  search.html  station.html  station_form.html  stations.html
